--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,19 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="./index.html"><span class="decor">Web</span> Studio</a>
+      <a class="logo" id="top" href="./index.html"><span class="active">Web</span> Studio</a>
       <nav class="navigation">
         <ul class="nav-list">
-          <li class="nav-item"><a href="#">Студия</a></li>
-          <li class="nav-item"><a href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-item"><a href="./index.html">Студия</a></li>
+          <li class="nav-item active"><a href="./portfolio.html">Портфолио</a></li>
           <li class="nav-item"><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul class="contacts-list">
         <li class="contacts-item">
           <a href="mailto:info@devstudio.com">
-            <img src="./images/envelope(hover).svg" alt="Иконка конверта" /> info@devstudio.com</a
+            <img src="./images/envelope(hover).svg" alt="Иконка конверта" />
+            info@devstudio.com</a
           >
         </li>
         <li class="contacts-item">
@@ -45,7 +46,7 @@
         </ul>
         <ul class="works">
           <li class="works-item">
-            <a class="item-link" href="https://google.com">
+            <a class="item-link" href="#">
               <div class="item-image">
                 <img src="./images/p-laptop.jpg" alt="Изображение ноутбука" />
               </div>
@@ -58,7 +59,7 @@
             </a>
           </li>
           <li class="works-item">
-            <a class="link" href="https://google.com">
+            <a class="link" href="#">
               <div class="item-image">
                 <img src="./images/p-basket.jpg" alt="Постер New Orlean vs Golden Star" />
               </div>
@@ -70,7 +71,7 @@
             </a>
           </li>
           <li class="works-item">
-            <a class="link" href="https://google.com">
+            <a class="link" href="#">
               <div class="item-image">
                 <img src="./images/p-sea.jpg" alt="Изображение лого ресторана" />
               </div>
@@ -82,7 +83,7 @@
             </a>
           </li>
           <li class="works-item">
-            <a class="link" href="https://google.com">
+            <a class="link" href="#">
               <div class="item-image">
                 <img src="./images/p-headphones.jpg" alt="Изображение наушников" />
               </div>
@@ -94,7 +95,7 @@
             </a>
           </li>
           <li class="works-item">
-            <a class="link" href="https://google.com">
+            <a class="link" href="#">
               <div class="item-image">
                 <img src="./images/p-box.jpg" alt="Изображение коробок" />
               </div>
@@ -106,7 +107,7 @@
             </a>
           </li>
           <li class="works-item">
-            <a class="link" href="https://google.com">
+            <a class="link" href="#">
               <div class="item-image">
                 <img src="./images/imac.jpg" alt="Изображение монитора" />
               </div>
@@ -118,7 +119,7 @@
             </a>
           </li>
           <li class="works-item">
-            <a class="link" href="https://google.com">
+            <a class="link" href="#">
               <div class="item-image">
                 <img src="./images/p-book.jpg" alt="Изображение книги" />
               </div>
@@ -130,7 +131,7 @@
             </a>
           </li>
           <li class="works-item">
-            <a class="link" href="https://google.com">
+            <a class="link" href="#">
               <div class="item-image">
                 <img src="./images/p-lab.jpg" alt="Изображение логотипа компании" />
               </div>
@@ -142,7 +143,7 @@
             </a>
           </li>
           <li class="works-item">
-            <a class="link" href="https://google.com">
+            <a class="link" href="#">
               <div class="item-image">
                 <img src="./images/laptop.jpg" alt="Изображение ноутбука" />
               </div>
@@ -157,12 +158,16 @@
       </section>
     </main>
     <footer>
-      <a class="logo" href="./index.html"><span class="decor">Web</span> Studio</a>
+      <a class="logo" href="#top"><span class="active">Web</span> Studio</a>
       <address class="address">
         <ul class="address-list">
           <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
-          <li class="contacts-item"><a href="mailto:info@example.com">info@example.com</a></li>
-          <li class="contacts-item"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="contacts-item">
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="contacts-item">
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
       <p class="join">Присоединяйтесь</p>
