--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="hero">
         <!-- <img src="https://via.placeholder.com/1600x600" alt="" /> -->
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <a class="button main" href="#">Заказать услугу</a>
+        <button type="button" class="button main">Заказать услугу</button>
       </section>
       <!-- Features -->
       <section class="features">
