--- a/portfolio.html
+++ b/portfolio.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;900&display=swap"
     />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Портфолио</title>
   </head>
   <body>
@@ -38,11 +38,11 @@
         <h1>Наши работы</h1>
         <!-- Скрыть заголовок -->
         <ul class="filters-list">
-          <li class="filters-item"><a class="button" href="#">Все</a></li>
-          <li class="filters-item"><a class="button" href="#">Веб-сайты</a></li>
-          <li class="filters-item"><a class="button" href="#">Приложения</a></li>
-          <li class="filters-item"><a class="button" href="#">Дизайн</a></li>
-          <li class="filters-item"><a class="button" href="#">Маркетинг</a></li>
+          <li class="filters-item"><button type="button" class="button">Все</button></li>
+          <li class="filters-item"><button type="button" class="button shadow">Веб-сайты</button></li>
+          <li class="filters-item"><button type="button" class="button">Приложения</button></li>
+          <li class="filters-item"><button type="button" class="button">Дизайн</button></li>
+          <li class="filters-item"><button type="button" class="button">Маркетинг</button></li>
         </ul>
         <ul class="works">
           <li class="works-item">
@@ -50,7 +50,7 @@
               <div class="item-image">
                 <img src="./images/p-laptop.jpg" alt="Изображение ноутбука" />
               </div>
-              <p class="item-title">Технокряк</p>
+              <h2 class="item-title">Технокряк</h2>
               <p class="filter-type">Веб-сайт</p>
               <p class="item-description">
                 Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
@@ -63,7 +63,7 @@
               <div class="item-image">
                 <img src="./images/p-basket.jpg" alt="Постер New Orlean vs Golden Star" />
               </div>
-              <p class="item-title">Постер New Orlean vs Golden Star</p>
+              <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
               <p class="filter-type">Дизайн</p>
               <p class="item-description">
                 Какой-то текст на тему....
@@ -75,7 +75,7 @@
               <div class="item-image">
                 <img src="./images/p-sea.jpg" alt="Изображение лого ресторана" />
               </div>
-              <p class="item-title">Ресторан Seafood</p>
+              <h2 class="item-title">Ресторан Seafood</h2>
               <p class="filter-type">Приложение</p>
               <p class="item-description">
                 Какой-то текст на тему...
@@ -87,7 +87,7 @@
               <div class="item-image">
                 <img src="./images/p-headphones.jpg" alt="Изображение наушников" />
               </div>
-              <p class="item-title">Проект Prime</p>
+              <h2 class="item-title">Проект Prime</h2>
               <p class="filter-type">Маркетинг</p>
               <p class="item-description">
                 Какой-то текст на тему...
@@ -99,7 +99,7 @@
               <div class="item-image">
                 <img src="./images/p-box.jpg" alt="Изображение коробок" />
               </div>
-              <p class="item-title">Проект Boxes</p>
+              <h2 class="item-title">Проект Boxes</h2>
               <p class="filter-type">Приложение</p>
               <p class="item-description">
                 Какой-то текст на тему...
@@ -111,7 +111,7 @@
               <div class="item-image">
                 <img src="./images/imac.jpg" alt="Изображение монитора" />
               </div>
-              <p class="item-title">Inspiration has no Borders</p>
+              <h2 class="item-title">Inspiration has no Borders</h2>
               <p class="filter-type">Веб-сайт</p>
               <p class="item-description">
                 Какой-то текст на тему
@@ -123,7 +123,7 @@
               <div class="item-image">
                 <img src="./images/p-book.jpg" alt="Изображение книги" />
               </div>
-              <p class="item-title">Издание Limited Edition</p>
+              <h2 class="item-title">Издание Limited Edition</h2>
               <p class="filter-type">Дизайн</p>
               <p class="item-description">
                 Какой-то текст на тему...
@@ -135,7 +135,7 @@
               <div class="item-image">
                 <img src="./images/p-lab.jpg" alt="Изображение логотипа компании" />
               </div>
-              <p class="item-title">Проект LAB</p>
+              <h2 class="item-title">Проект LAB</h2>
               <p class="filter-type">Маркетинг</p>
               <p class="item-description">
                 Какой-то текст на тему...
@@ -147,7 +147,7 @@
               <div class="item-image">
                 <img src="./images/laptop.jpg" alt="Изображение ноутбука" />
               </div>
-              <p class="item-title">Growing Business</p>
+              <h2 class="item-title">Growing Business</h2>
               <p class="filter-type">Приложение</p>
               <p class="item-description">
                 Какой-то текст на тему...
