--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <h2 class="title">Наша команда</h2>
         <ul class="team-list">
           <li class="team-item">
-            <img src="./images/team-John.jpg" alt="Фото Джона Смита" />
-            <h3 class="item-title" lang="en">John Smith</h3>
+            <img src="./images/team-John.jpg" alt="Фото Николая Кучеренко" />
+            <h3 class="item-title">Николай Кучеренко</h3>
             <p class="profession" lang="en">Product Designer</p>
             <ul class="social">
               <li class="social-item">
@@ -125,8 +125,8 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="./images/team-Marta.jpg" alt="Фото Марты Стюарт" />
-            <h3 class="item-title" lang="en">Marta Stewart</h3>
+            <img src="./images/team-Marta.jpg" alt="Фото Ольги Ивановой" />
+            <h3 class="item-title">Ольга Иванова</h3>
             <p class="profession" lang="en">Frontend Developer</p>
             <ul class="social">
               <li class="social-item">
@@ -144,8 +144,8 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="./images/team-Robert.jpg" alt="Фото Роберта Якиса" />
-            <h3 class="item-title" lang="en">Robert Jakis</h3>
+            <img src="./images/team-Robert.jpg" alt="Фото Андрея Шевченко" />
+            <h3 class="item-title">Андрей Шевченко</h3>
             <p class="profession" lang="en">Marketing</p>
             <ul class="social">
               <li class="social-item">
@@ -163,8 +163,8 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="./images/team-Martin.jpg" alt="Фото Мартина До" />
-            <h3 class="item-title" lang="en">Martin Doe</h3>
+            <img src="./images/team-Martin.jpg" alt="Фото Ивана Николаева" />
+            <h3 class="item-title">Иван Николаев</h3>
             <p class="profession" lang="en">UI Designer</p>
             <ul class="social">
               <li class="social-item">
